--- a/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
+++ b/src/app/shared/shared.menu.unrouted/shared.menu.unrouted.component.html
@@ -57,10 +57,10 @@
         <!-- Opción "Creación" solo para ADMIN -->
         <li class="nav-item" *ngIf="isAdmin">
           <a
-            class="nav-link text-success fw-bold"
+            class="nav-link"
             [routerLink]="'/admin/producto/new'"
           >
-            <i class="bi bi-plus-circle me-1"></i> Creación
+            <i class="bi bi-plus-circle me-1"></i> Creación de Producto
           </a>
         </li>
 
