--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center m-3">
+<div class="row justify-content-center m-3" [ngClass]="{ 'entorno-dev': isDev }">
   <div class="col-lg-10 col-md-12 col-sm-12 d-flex flex-wrap">
     <!-- Parte izquierda -->
     <div class="col-lg-6 col-md-12">
