--- a/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
+++ b/src/app/component/producto/producto.admin.xproveedor.plist.routed/producto.admin.xproveedor.plist.routed.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-5" [ngClass]="{ 'entorno-dev': isDev }">
   <div class="row">
     <div class="col-12">
       <!-- Título -->
